Add `travis_wait` instead of `brew --verbose`
Otherwise, the verbosity causes the following error to occur which
terminates the Travis-CI job:

> The log length has exceeded the limit of 4 MB (this usually means that
> the test suite is raising the same exception over and over).

The `travis_wait` command will periodically output a line that makes it
possible for the job to continue running despite the long build time.

See <https://docs.travis-ci.com/user/common-build-problems/#Build-times-out-because-no-output-was-received>.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - brew unlink boost
 
 script:
-  - brew install --verbose --build-bottle boost --c++11
+  - travis_wait 45 brew install --build-bottle boost --c++11
   - brew bottle boost
 
 before_deploy:
