Bottle tarballs may have a suffix

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
   - brew bottle boost
 
 before_deploy:
-  - export RELEASE_FILES=$(ls *.bottle.tar.gz)
+  - export RELEASE_FILES=$(ls *.bottle*.tar.gz)
   - "echo 'Deploying files to Github: '$RELEASE_FILES"
 
 deploy:
