--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ script:
 before_deploy:
   - export RELEASE_FILES=$(ls *.bottle*.tar.gz)
   - "echo 'Deploying files to Github: '$RELEASE_FILES"
+  - du -h $RELEASE_FILES
 
 deploy:
   provider: releases
